cabal-version: 1.12
category:       Development
name:           ide
version:        0.1.0.0
synopsis:       LSP server for GHC
description:    Please see the README on GitHub at <https://github.com/alanz/ide#readme>
homepage:       https://github.com/alanz/ide#readme
bug-reports:    https://github.com/alanz/ide/issues
author:         Alan Zimmerman
maintainer:     alan.zimm@gmail.com
copyright:      Alan Zimmerman
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/alanz/ide

library
  exposed-modules:
      Lib
  other-modules:
      Paths_ide
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable ide-exe
  main-is: Main.hs
  other-modules:
      Paths_ide
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ide
  default-language: Haskell2010

test-suite ide-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_ide
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ide
  default-language: Haskell2010
