cabal-version: 1.12
category:       Development
name:           ide
version:        0.1.0.0
synopsis:       LSP server for GHC
description:    Please see the README on GitHub at <https://github.com/alanz/ide#readme>
homepage:       https://github.com/alanz/ide#readme
bug-reports:    https://github.com/alanz/ide/issues
author:         Alan Zimmerman
maintainer:     alan.zimm@gmail.com
copyright:      Alan Zimmerman
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/alanz/ide

library
  exposed-modules:
      Ide.Plugin.Example
  other-modules:
      Paths_ide
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , ghcide
    , aeson,
        async,
        binary,
        bytestring,
        containers,
        data-default,
        deepseq,
        directory,
        extra,
        fuzzy,
        filepath,
        haddock-library,
        hashable,
        haskell-lsp-types == 0.19.*,
        haskell-lsp == 0.19.*,
        mtl,
        network-uri,
        prettyprinter-ansi-terminal,
        prettyprinter-ansi-terminal,
        prettyprinter,
        regex-tdfa >= 1.3.1.0,
        rope-utf16-splay,
        safe-exceptions,
        shake >= 0.17.5,
        sorted-list,
        stm,
        syb,
        text,
        time,
        transformers,
        unordered-containers,
        utf8-string,
        hslogger

  default-language: Haskell2010

executable ide
  main-is: Main.hs
  other-modules:
      Paths_ide
  hs-source-dirs:
      exe
  ghc-options:
              -threaded
              -Wall
              -Wno-name-shadowing
              -- allow user RTS overrides
              -rtsopts
              -- disable idle GC
              -- disable parallel GC
              -- increase nursery size
              "-with-rtsopts=-I0 -qg -A128M"
  build-depends:
      base >=4.7 && <5
    , ide
    , ghcide
    , hslogger
    , containers
    , data-default
    , directory
    , extra
    , filepath
    , ghc-paths
    , ghc
    , gitrev
    , haskell-lsp
    , hie-bios >= 0.3.2 && < 0.4
    , ghcide
    , optparse-applicative
    , shake >= 0.17.5
    , text
  other-modules:
      Arguments
      Paths_ide
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_ide
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ide
  default-language: Haskell2010
