cabal-version: 1.12
category:       Development
name:           ide
version:        0.1.0.0
synopsis:       LSP server for GHC
description:    Please see the README on GitHub at <https://github.com/alanz/ide#readme>
homepage:       https://github.com/alanz/ide#readme
bug-reports:    https://github.com/alanz/ide/issues
author:         Alan Zimmerman
maintainer:     alan.zimm@gmail.com
copyright:      Alan Zimmerman
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md


flag pedantic
  Description: Enable -Werror
  Default:     False
  Manual:      True

source-repository head
  type: git
  location: https://github.com/alanz/ide

library
  exposed-modules:
      Ide.Cradle
      Ide.Plugin.Example
      Ide.Options
      Ide.Version
  other-modules:
      Paths_ide
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , aeson
    , async
    , binary
    , bytestring
    , Cabal
    , cabal-helper >= 1.0
    , containers
    , data-default
    , deepseq
    , directory
    , extra
    , filepath
    , fuzzy
    , ghc
    , ghcide
    , gitrev
    , haddock-library
    , hashable
    , haskell-lsp == 0.19.*
    , haskell-lsp-types == 0.19.*
    , hie-bios
    , hslogger
    , mtl
    , network-uri
    , optparse-simple
    , prettyprinter
    , prettyprinter-ansi-terminal
    , prettyprinter-ansi-terminal
    , process
    , regex-tdfa >= 1.3.1.0
    , rope-utf16-splay
    , safe-exceptions
    , shake >= 0.17.5
    , sorted-list
    , stm
    , syb
    , text
    , time
    , transformers
    , unordered-containers
    , utf8-string
  ghc-options:
         -Wall
         -Wredundant-constraints
         -Wno-name-shadowing
  if flag(pedantic)
     ghc-options:      -Werror

  default-language: Haskell2010

executable haskell-ide
  main-is: Main.hs
  other-modules:
      Paths_ide
  hs-source-dirs:
      exe
  ghc-options:
              -threaded
              -Wall
              -Wno-name-shadowing
              -Wredundant-constraints
              -- allow user RTS overrides
              -rtsopts
              -- disable idle GC
              -- disable parallel GC
              -- increase nursery size
              "-with-rtsopts=-I0 -qg -A128M"
  if flag(pedantic)
     ghc-options:      -Werror

  build-depends:
      base >=4.7 && <5
    , containers
    , data-default
    , directory
    , extra
    , filepath
    , ghc
    , ghc-paths
    , ghcide
    , ghcide
    , gitrev
    , haskell-lsp
    , hie-bios >= 0.3.2 && < 0.4
    , hslogger
    , ide
    , optparse-applicative
    , shake >= 0.17.5
    , text
  other-modules:
      Arguments
      Paths_ide
  default-language: Haskell2010

executable haskell-ide-wrapper
  hs-source-dirs:      exe
  main-is:             Wrapper.hs
  other-modules:       Paths_ide
  autogen-modules:     Paths_ide
  build-depends:       base
                     , directory
                     , filepath
                     , haskell-lsp
                     , hie-bios
                     , hslogger
                     , optparse-simple
                     , process
                     , ide
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wredundant-constraints
                       -with-rtsopts=-T
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_ide
  hs-source-dirs:
      test
  ghc-options:
         -Wall
         -Wredundant-constraints
         -Wno-name-shadowing
         -threaded -rtsopts -with-rtsopts=-N
  if flag(pedantic)
     ghc-options:      -Werror
  build-depends:
      base >=4.7 && <5
    , ide
  default-language: Haskell2010
