cabal-version:      3.0
name:               cabal-parser
version:            0.1.0.0
synopsis:           Parses cabal files to AST, annotated with source positions
license:            MIT
license-file:       LICENSE
author:             VeryMilkyJoe
maintainer:         jana.chadt@nets.at
category:           Parser
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Text.Cabal.Data
    Text.Cabal.Parser
    Text.Cabal.Types
    Text.Cabal.Value

  build-depends:
    , base
    , containers
    , lsp
    , lsp-types
    , megaparsec            >= 8 && < 10
    , prettyprinter         >= 1.7
    , text
  hs-source-dirs:   src
  default-language: Haskell2010

executable cabal-parser-cli
  import:           warnings
  default-language: Haskell2010
  hs-source-dirs:   exe
  main-is:          Main.hs
  other-modules:    Options
  build-depends:
      , base
      , cabal-parser
      , optparse-applicative
      , filepath
      , directory
      , text
      , transformers
      , megaparsec
      , prettyprinter

test-suite tests
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:    Parser
  build-depends:
      , base
      , Cabal-syntax
      , cabal-parser
      , directory
      , filepath
      , lsp-types
      , megaparsec
      , prettyprinter
      , tasty
      , tasty-expected-failure
      , tasty-hunit
      , text
