cabal-version:      3.0
build-type:         Simple
category:           Development
name:               ghcide-bench
version:            2.0.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             The Haskell IDE team
maintainer:         pepeiborra@gmail.com
copyright:          The Haskell IDE team
synopsis:           An LSP client for running performance experiments on HLS
description:        An LSP client for running performance experiments on HLS
homepage:           https://github.com/haskell/haskell-language-server/tree/master/ghcide#readme
bug-reports:        https://github.com/haskell/haskell-language-server/issues
tested-with:        GHC == 8.10.7 || == 9.0.2 || == 9.2.5

source-repository head
    type:     git
    location: https://github.com/haskell/haskell-language-server.git

executable ghcide-bench
    default-language: Haskell2010
    build-depends:
        aeson,
        base,
        bytestring,
        containers,
        data-default,
        directory,
        extra,
        filepath,
        hls-plugin-api,
        lens,
        ghcide-bench,
        lsp-test,
        lsp-types,
        optparse-applicative,
        process,
        safe-exceptions,
        hls-graph,
        shake,
        tasty-hunit >= 0.10,
        text
    hs-source-dirs: exe
    ghc-options: -threaded -Wall -Wno-name-shadowing -rtsopts
    main-is: Main.hs
    default-extensions:
        BangPatterns
        DeriveFunctor
        DeriveGeneric
        FlexibleContexts
        GeneralizedNewtypeDeriving
        LambdaCase
        NamedFieldPuns
        OverloadedStrings
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        ViewPatterns

library
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -Wno-name-shadowing
    exposed-modules:
        Experiments.Types
        Experiments
    build-depends:
        aeson,
        async,
        base == 4.*,
        binary,
        bytestring,
        deepseq,
        directory,
        extra,
        filepath,
        ghcide,
        ghcide-test-utils,
        hashable,
        lens,
        lsp-test,
        lsp-types,
        optparse-applicative,
        parser-combinators,
        process,
        safe-exceptions,
        shake,
        text,
    default-extensions:
        BangPatterns
        DeriveFunctor
        DeriveGeneric
        FlexibleContexts
        GeneralizedNewtypeDeriving
        LambdaCase
        NamedFieldPuns
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        ViewPatterns

test-suite test
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    build-tool-depends:
        ghcide:ghcide,
        implicit-hie:gen-hie
    main-is: Main.hs
    hs-source-dirs: test
    ghc-options: -Wunused-packages
    ghc-options: -threaded -Wall
    build-depends:
        base,
        extra,
        ghcide-bench,
        lsp-test ^>= 0.14,
        tasty,
        tasty-hunit >= 0.10,
        tasty-rerun,
    default-extensions:
        BangPatterns
        DeriveFunctor
        DeriveGeneric
        FlexibleContexts
        GeneralizedNewtypeDeriving
        LambdaCase
        NamedFieldPuns
        OverloadedStrings
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        ViewPatterns
